--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -5,4 +5,4 @@ siteDescription: >-
   CMS v2 and Uploadcare media library.
 socialMediaCard:
   image: 'https://ucarecdn.com/fcc8d148-a9a8-42ee-a793-0f12b1437f61/'
-googleTrackingId: 'UA-133175780-1'
+googleTrackingId: 'GTM-WNSBKDX' //Google Tracking ID is Google Tag Manager ID.
